--- a/package.json
+++ b/package.json
@@ -26,17 +26,18 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.2",
     "gh-pages": "^3.1.0",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.5",
     "postcss-loader": "^5.0.0",
     "rimraf": "^3.0.2",
-    "webpack": "^5.19.0",
+    "webpack": "^5.37.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "core-js": "^3.8.3"
+    "core-js": "^3.8.3",
+    "prettier": "^2.3.0"
   }
 }
